# sia

./: .gitattributes  .gitignore  .mcp.json  .npmignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  PLUGIN_README.md  PLUGIN_USAGE.md  README.md  SECURITY.md  TEAM-SYNC-DEPLOYMENT.md  biome.json  package-lock.json  package.json  requirements.txt  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
.claude-plugin/: marketplace.json  plugin.json
agents/: README.md  sia-changelog-writer.md  sia-code-reviewer.md  sia-conflict-resolver.md  sia-convention-enforcer.md  sia-debug-specialist.md  sia-debug.md  sia-decision-reviewer.md  sia-dependency-tracker.md  sia-doc-writer.md  sia-explain.md  sia-feature.md  sia-knowledge-capture.md  sia-lead-architecture-advisor.md  sia-lead-team-health.md  sia-migration.md  sia-onboarding.md  sia-orientation.md  sia-pm-briefing.md  sia-pm-risk-advisor.md  sia-pr-writer.md  sia-qa-analyst.md  sia-qa-regression-map.md  sia-refactor.md  sia-regression.md  sia-search-debugger.md  sia-security-audit.md  sia-test-advisor.md
commands/: README.md  at-time.md  brainstorm.md  capture.md  changelog-writer.md  code-reviewer.md  community.md  compare.md  conflict-resolver.md  conflicts.md  convention-enforcer.md  debug.md  decision-reviewer.md  (+69 more)
sia-native/: .gitignore  Cargo.toml  package-lock.json  package.json
sia-native/__test__/: index.spec.ts
sia-native/src/: cache.rs  lib.rs
sia-native/src/ast_diff/: mod.rs
sia-native/src/graph/: centrality.rs  components.rs  dijkstra.rs  mod.rs  pagerank.rs
(+792 files in other folders)
